<resources>
    <string name="search" translatable="false">Поиск</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="mediateca" translatable="false">Медиатека</string>
    <string name="options" translatable="false">Настройки</string>
    <string name="playlist_maker" translatable="false">Playlist maker</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="back_button_description" translatable="false">Назад</string>
    <string name="practicum_android_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="email_theme_support" translatable="false">\"Сообщение разработчикам и разработчицам приложения Playlist Maker\"</string>
    <string name="thx_for_the_app" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="prac_offer_agree" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email" translatable="false">oleglvl80@mail.ru</string>
    <string name="clear_button" translatable="false">Кнопка очистить</string>
    <string name="empty_search_result"  translatable="false">Ничего не нашлось</string>
    <string name="problems_with_connection_search"  translatable="false">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету </string>
    <string name="refresh"  translatable="false">Обновить</string>
    <string name="errsearch">ErrSearch</string>
    <string name="errcon">errcon</string>
    <string name="search_history" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
</resources>