<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorWhiteToBlack"
    android:orientation="vertical"
    android:layout_marginTop='20dp'
    android:padding="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/StyleToolbar"
        app:title="@string/options" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:text="@string/dark_theme"
        style="@style/OptionsScreenButton"
        android:paddingStart="@dimen/basic_padding"
        app:trackTint="?attr/colorLightGrayToLightBlue"
        app:thumbTint="?attr/colorGrayToBlue"
        app:trackTintMode="multiply"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/shareAppButton"
        android:text="@string/share_app"
        app:icon="@drawable/share"
        style="@style/OptionsScreenButton"
        />

    <Button
        android:id="@+id/writeToSupportButton"
        android:text="@string/write_to_support"
        app:icon="@drawable/support"
        style="@style/OptionsScreenButton"
        />

    <Button
        android:id="@+id/usersAgreementButton"
        android:text="@string/user_agreement"
        app:icon="@drawable/forward_arrow"
        style="@style/OptionsScreenButton"
        />

</LinearLayout>